2024-08-10 Konstantin Kushnir <chpock@gmail.com>
	* Remove packages and code related to compatibility