@@ -1,0 +1,14 @@
+# installkit - console package
+#
+# Copyright (C) 2024 Konstantin Kushnir <chpock@gmail.com>
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+
+package require tkcon
+
+tkcon show
+
+package provide installkit::console 1.0.0
